Firefox Footer Fix
My footer was too short in firefox so I added some padding.

--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,10 @@ footer {
 }
 
 
+footer {
+	padding: 0 0 30px;
+}
+
 /************************************
 Form Styles
 ************************************/
